--- a/grafik.html
+++ b/grafik.html
@@ -5,24 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Gå Glad I Bad - Grafik</title>
-    <link rel="stylesheet" href="../website/css/style.css" />
-    <link rel="stylesheet" href="../04_animation/website/css/style.css" />
-    <link
-      rel="icon"
-      href="../04_animation/website/img/favicon-32x32.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="website/css/style.css" />
+    <link rel="stylesheet" href="website/css/style.css" />
+    <link rel="icon" href="website/img/favicon-32x32.png" type="image/x-icon" />
   </head>
 
   <body>
     <header>
       <nav>
         <ul class="nav-links">
-          <li><a href="../04_animation/index.html"> Forside</a></li>
-          <li><a href="../04_animation/spil.html"> Spil</a></li>
-          <li><a href="../04_animation/assets.html"> Assets</a></li>
-          <li><a href="../04_animation/teknik.html"> Teknik</a></li>
-          <li><a href="../04_animation/grafik.html"> Grafik</a></li>
+          <li><a href="index.html"> Forside</a></li>
+          <li><a href="spil.html"> Spil</a></li>
+          <li><a href="assets.html"> Assets</a></li>
+          <li><a href="teknik.html"> Teknik</a></li>
+          <li><a href="grafik.html"> Grafik</a></li>
         </ul>
       </nav>
     </header>
@@ -38,14 +34,10 @@
             <h3>Ide udvikling</h3>
             <img
               class="imglille"
-              src="../04_animation/website/grafik/idekryds.png"
+              src="website/grafik/idekryds.png"
               alt="Ide kryds"
             />
-            <img
-              class="imglille"
-              src="../04_animation/website/grafik/ide.png"
-              alt="Ide"
-            />
+            <img class="imglille" src="website/grafik/ide.png" alt="Ide" />
             <p>
               Til at begynde med brugte vi en form for “connect the dots”-metode
               til at generere forskellige idéer. Jeg havde allerede en klar idé
@@ -89,7 +81,7 @@
 
             <img
               class="imgstor"
-              src="../04_animation/website/grafik/prototype.png"
+              src="website/grafik/prototype.png"
               alt="Prototypen"
             />
 
@@ -105,7 +97,7 @@
 
             <img
               class="imgmellem"
-              src="../04_animation/website/grafik/aktivitetsdiagram.png"
+              src="website/grafik/aktivitetsdiagram.png"
               alt="aktivitetsdiagram"
             />
 
@@ -125,7 +117,7 @@
 
             <img
               class="imglille"
-              src="../04_animation/website/grafik/moodboard.png"
+              src="website/grafik/moodboard.png"
               alt="moodboard"
             />
 
@@ -149,19 +141,19 @@
 
             <img
               class="imglille"
-              src="../04_animation/website/grafik/gladbaby.png"
+              src="website/grafik/gladbaby.png"
               alt="gladbaby"
             />
 
             <img
               class="imglille"
-              src="../04_animation/website/grafik/badeænder.png"
+              src="website/grafik/badeænder.png"
               alt="badeænder"
             />
 
             <img
               class="imglille"
-              src="../04_animation/website/grafik/kedbaby.png"
+              src="website/grafik/kedbaby.png"
               alt="kedbaby"
             />
 
@@ -192,7 +184,7 @@
 
             <img
               class="imgmellem"
-              src="../04_animation/website/grafik/baggrund.svg"
+              src="website/grafik/baggrund.svg"
               alt="baggrund"
             />
 
@@ -208,7 +200,7 @@
             </p>
             <img
               class="imgmellem"
-              src="../04_animation/website/grafik/typografi.png"
+              src="website/grafik/typografi.png"
               alt="tyopgrafi"
             />
           </article>
