--- a/spil.html
+++ b/spil.html
@@ -5,24 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Gå Glad I Bad - Spil</title>
-    <link rel="stylesheet" href="../04_animation/website/css/spil.css" />
-    <link rel="stylesheet" href="../04_animation/website/css/style.css" />
-    <link
-      rel="icon"
-      href="../04_animation/website/img/favicon-32x32.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="website/css/spil.css" />
+    <link rel="stylesheet" href="website/css/style.css" />
+    <link rel="icon" href="website/img/favicon-32x32.png" type="image/x-icon" />
   </head>
 
   <body>
     <header>
       <nav>
         <ul class="nav-links">
-          <li><a href="../04_animation/index.html"> Forside</a></li>
-          <li><a href="../04_animation/spil.html"> Spil</a></li>
-          <li><a href="../04_animation/assets.html"> Assets</a></li>
-          <li><a href="../04_animation/teknik.html"> Teknik</a></li>
-          <li><a href="../04_animation/grafik.html"> Grafik</a></li>
+          <li><a href="index.html"> Forside</a></li>
+          <li><a href="spil.html"> Spil</a></li>
+          <li><a href="assets.html"> Assets</a></li>
+          <li><a href="teknik.html"> Teknik</a></li>
+          <li><a href="grafik.html"> Grafik</a></li>
         </ul>
       </nav>
     </header>
@@ -49,21 +45,21 @@
             <div id="elektronik_container">
               <div id="elektronik_sprite"></div>
               <div class="overlay">
-                <img src="../04_animation/website/img/stoed.svg" alt="Effect" />
+                <img src="website/img/stoed.svg" alt="Effect" />
               </div>
             </div>
 
             <div id="elektronik_container1" class="">
               <div id="elektronik_sprite1" class=""></div>
               <div class="overlay">
-                <img src="../04_animation/website/img/stoed.svg" alt="Effect" />
+                <img src="website/img/stoed.svg" alt="Effect" />
               </div>
             </div>
 
             <div id="elektronik_container2" class="">
               <div id="elektronik_sprite2" class=""></div>
               <div class="overlay">
-                <img src="../04_animation/website/img/stoed.svg" alt="Effect" />
+                <img src="website/img/stoed.svg" alt="Effect" />
               </div>
             </div>
           </div>
@@ -98,20 +94,17 @@
           <div id="playagain_btn2"></div>
         </div>
 
-        <audio
-          src="../04_animation/website/sound/Island_Fever.mp3"
-          id="snd1"
-        ></audio>
-        <audio src="../04_animation/website/sound/click.mp3" id="snd2"></audio>
-        <audio src="../04_animation/website/sound/and.mp3" id="snd3"></audio>
-        <audio src="../04_animation/website/sound/stoed.mp3" id="snd4"></audio>
-        <audio src="../04_animation/website/sound/lose.mp3" id="snd5"></audio>
-        <audio src="../04_animation/website/sound/win.mp3" id="snd6"></audio>
+        <audio src="website/sound/Island_Fever.mp3" id="snd1"></audio>
+        <audio src="website/sound/click.mp3" id="snd2"></audio>
+        <audio src="website/sound/and.mp3" id="snd3"></audio>
+        <audio src="website/sound/stoed.mp3" id="snd4"></audio>
+        <audio src="website/sound/lose.mp3" id="snd5"></audio>
+        <audio src="website/sound/win.mp3" id="snd6"></audio>
       </div>
     </main>
     <footer>
       <p>&#169;Celina Sguazzino</p>
     </footer>
-    <script src="../04_animation/website/js/script.js"></script>
+    <script src="website/js/script.js"></script>
   </body>
 </html>
