--- a/teknik.html
+++ b/teknik.html
@@ -5,24 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Gå Glad I Bad - Teknik</title>
-    <link rel="stylesheet" href="../website/css/style.css" />
-    <link rel="stylesheet" href="../04_animation/website/css/style.css" />
-    <link
-      rel="icon"
-      href="../04_animation/website/img/favicon-32x32.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="website/css/style.css" />
+    <link rel="icon" href="website/img/favicon-32x32.png" type="image/x-icon" />
   </head>
 
   <body>
     <header>
       <nav>
         <ul class="nav-links">
-          <li><a href="../04_animation/index.html"> Forside</a></li>
-          <li><a href="../04_animation/spil.html"> Spil</a></li>
-          <li><a href="../04_animation/assets.html"> Assets</a></li>
-          <li><a href="../04_animation/teknik.html"> Teknik</a></li>
-          <li><a href="../04_animation/grafik.html"> Grafik</a></li>
+          <li><a href="index.html"> Forside</a></li>
+          <li><a href="spil.html"> Spil</a></li>
+          <li><a href="assets.html"> Assets</a></li>
+          <li><a href="teknik.html"> Teknik</a></li>
+          <li><a href="grafik.html"> Grafik</a></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +35,7 @@
 
         <img
           class="imgmellem"
-          src="../04_animation/website/grafik/aktivitetsdiagram.png"
+          src="website/grafik/aktivitetsdiagram.png"
           alt="aktivitetsdiagram"
         />
       </article>
@@ -69,10 +65,7 @@
           lyde og interaktioner i realtid.
         </p>
 
-        <img
-          src="../04_animation/website/img/gladIbad.svg"
-          alt="aktivitetsdiagram"
-        />
+        <img src="website/img/gladIbad.svg" alt="aktivitetsdiagram" />
       </article>
     </main>
 
