--- a/assets.html
+++ b/assets.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Gå Glad I Bad - Assets</title>
-    <link rel="stylesheet" href="../04_animation/website/css/style.css" />
+    <link rel="stylesheet" href="/website/css/style.css" />
     <link
       rel="icon"
-      href="../04_animation/website/img/favicon-32x32.png"
+      href="website/img/favicon-32x32.png"
       type="image/x-icon"
     />
   </head>
@@ -17,11 +17,11 @@
     <header>
       <nav>
         <ul class="nav-links">
-          <li><a href="../04_animation/index.html"> Forside</a></li>
-          <li><a href="../04_animation/spil.html"> Spil</a></li>
-          <li><a href="../04_animation/assets.html"> Assets</a></li>
-          <li><a href="../04_animation/teknik.html"> Teknik</a></li>
-          <li><a href="../04_animation/grafik.html"> Grafik</a></li>
+          <li><a href="index.html"> Forside</a></li>
+          <li><a href="spil.html"> Spil</a></li>
+          <li><a href="assets.html"> Assets</a></li>
+          <li><a href="teknik.html"> Teknik</a></li>
+          <li><a href="grafik.html"> Grafik</a></li>
         </ul>
       </nav>
     </header>
@@ -32,26 +32,26 @@
       <h2>Skærme</h2>
       <section>
         <h3>Titelskærm</h3>
-        <img src="../04_animation/website/img/startskaerm.svg" alt="baggrund" />
+        <img src="website/img/startskaerm.svg" alt="baggrund" />
         <h3>Instruktions skærm</h3>
         <img
-          src="../04_animation/website/img/instruktioner.svg"
+          src="website/img/instruktioner.svg"
           alt="Instruktion"
         />
         <h3>Gameover skærm</h3>
         <img
-          src="../04_animation/website/img/gameover.svg"
+          src="website/img/gameover.svg"
           alt="Game over skærm"
         />
         <h3>Winner skærm</h3>
-        <img src="../04_animation/website/img/winner.svg" alt="Winner skærm" />
+        <img src="website/img/winner.svg" alt="Winner skærm" />
 
         <h3>Baggrund</h3>
-        <img src="../04_animation/website/img/baggrund.svg" alt="baggrund" />
+        <img src="website/img/baggrund.svg" alt="baggrund" />
         <h3>Mellemgrund</h3>
         <img
           class="mellemgrund"
-          src="../04_animation/website/img/badekar.svg"
+          src="website/img/badekar.svg"
           alt="mellemgrund"
         />
       </section>
@@ -65,23 +65,23 @@
         <h3>Knapper</h3>
         <img
           class="spilknap"
-          src="../04_animation/website/img/startsknap.svg"
+          src="website/img/startsknap.svg"
           alt="spil knap"
         />
         <br />
         <img
           class="spilknap"
-          src="../04_animation/website/img/instruktionsknap.svg"
+          src="website/img/instruktionsknap.svg"
           alt="instruktions knap"
         />
         <img
           class="spilknap"
-          src="../04_animation/website/img/tilbageknap.svg"
+          src="website/img/tilbageknap.svg"
           alt="instruktions knap"
         />
         <img
           class="spilknap"
-          src="../04_animation/website/img/proevigen.svg"
+          src="website/img/proevigen.svg"
           alt="Prøv igen"
         />
       </section>
@@ -91,60 +91,60 @@
         <h3>Gode elementer</h3>
         <img
           class="element"
-          src="../04_animation/website/img/badeand1.svg"
+          src="website/img/badeand1.svg"
           alt="badeand1"
         />
         <img
           class="element"
-          src="../04_animation/website/img/badeand2.svg"
+          src="website/img/badeand2.svg"
           alt="badeand2"
         />
         <img
           class="element"
-          src="../04_animation/website/img/badeand3.svg"
+          src="website/img/badeand3.svg"
           alt="badeand3"
         />
         <h3>Dårlige elementer</h3>
         <img
           class="element"
-          src="../04_animation/website/img/hartoerre.svg"
+          src="website/img/hartoerre.svg"
           alt="Hårtørre"
         />
         <img
           class="element"
-          src="../04_animation/website/img/barbermaskine.svg"
+          src="website/img/barbermaskine.svg"
           alt="barbermaskine"
         />
         <img
           class="element"
-          src="../04_animation/website/img/tandboerste.svg"
+          src="website/img/tandboerste.svg"
           alt="tandbørste"
         />
         <h3>Elementer ved tryk</h3>
         <img
           class="element"
-          src="../04_animation/website/img/stoed.svg"
+          src="website/img/stoed.svg"
           alt="Stød element"
         />
         <h3>Tid</h3>
-        <img class="tid" src="../04_animation/website/img/tid1.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid2.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid3.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid4.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid5.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid6.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid7.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid8.svg" alt="tid" />
-        <img class="tid" src="../04_animation/website/img/tid9.svg" alt="tid" />
+        <img class="tid" src="website/img/tid1.svg" alt="tid" />
+        <img class="tid" src="website/img/tid2.svg" alt="tid" />
+        <img class="tid" src="website/img/tid3.svg" alt="tid" />
+        <img class="tid" src="website/img/tid4.svg" alt="tid" />
+        <img class="tid" src="website/img/tid5.svg" alt="tid" />
+        <img class="tid" src="website/img/tid6.svg" alt="tid" />
+        <img class="tid" src="website/img/tid7.svg" alt="tid" />
+        <img class="tid" src="website/img/tid8.svg" alt="tid" />
+        <img class="tid" src="website/img/tid9.svg" alt="tid" />
         <img
           class="tid"
-          src="../04_animation/website/img/tid10.svg"
+          src="website/img/tid10.svg"
           alt="tid"
         />
         <h3>Point</h3>
-        <img src="../04_animation/website/img/point.svg" alt="Point" />
+        <img src="website/img/point.svg" alt="Point" />
         <h3>Liv</h3>
-        <img src="../04_animation/website/img/liv.svg" alt="Liv" />
+        <img src="website/img/liv.svg" alt="Liv" />
 
         <h2>Lyde</h2>
  
@@ -152,7 +152,7 @@
           <h3>Baggrundsmusik</h3>
           <audio controls>
             <source
-              src="../04_animation/website/sound/Island_Fever.mp3"
+              src="website/sound/Island_Fever.mp3"
               type="audio/mpeg"
             />
             Din browser understøtter ikke lydafspilleren.
@@ -165,7 +165,7 @@
           <h3>Når der klikkes på en knap</h3>
           <audio controls>
             <source
-              src="../04_animation/website/sound/click.mp3"
+              src="website/sound/click.mp3"
               type="audio/mpeg"
             />
             Din browser understøtter ikke lydafspilleren.
@@ -176,7 +176,7 @@
           <h3>Når der klikkes på badeand</h3>
           <audio controls>
             <source
-              src="../04_animation/website/sound/and.mp3"
+              src="website/sound/and.mp3"
               type="audio/mpeg"
             />
             Din browser understøtter ikke lydafspilleren.
@@ -188,7 +188,7 @@
           <h3>Når der klikkes på en elektronisk genstand</h3>
           <audio controls>
             <source
-              src="../04_animation/website/sound/stoed.mp3"
+              src="website/sound/stoed.mp3"
               type="audio/mpeg"
             />
             Din browser understøtter ikke lydafspilleren.
@@ -200,7 +200,7 @@
             <h3>Når man vinder</h3>
             <audio controls>
               <source
-                src="../04_animation/website/sound/win.mp3"
+                src="website/sound/win.mp3"
                 type="audio/mpeg"
               />
               Din browser understøtter ikke lydafspilleren.
@@ -213,7 +213,7 @@
             <h3>Når man taber</h3>
             <audio controls>
               <source
-                src="../04_animation/website/sound/lose.mp3"
+                src="website/sound/lose.mp3"
                 type="audio/mpeg"
               />
               Din browser understøtter ikke lydafspilleren.
