--- a/index.html
+++ b/index.html
@@ -5,31 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Gå Glad I Bad - Forside</title>
-    <link rel="stylesheet" href="../website/css/style.css" />
-    <link rel="stylesheet" href="../04_animation/website/css/style.css" />
+    <link rel="stylesheet" href="website/css/style.css" />
+    <link rel="stylesheet" href="website/css/style.css" />
 
-    <link
-      rel="icon"
-      href="../04_animation/website/img/favicon-32x32.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="website/img/favicon-32x32.png" type="image/x-icon" />
   </head>
 
   <body>
     <header>
       <nav>
         <ul class="nav-links">
-          <li><a href="../04_animation/index.html"> Forside</a></li>
-          <li><a href="../04_animation/spil.html"> Spil</a></li>
-          <li><a href="../04_animation/assets.html"> Assets</a></li>
-          <li><a href="../04_animation/teknik.html"> Teknik</a></li>
-          <li><a href="../04_animation/grafik.html"> Grafik</a></li>
+          <li><a href="index.html"> Forside</a></li>
+          <li><a href="spil.html"> Spil</a></li>
+          <li><a href="assets.html"> Assets</a></li>
+          <li><a href="teknik.html"> Teknik</a></li>
+          <li><a href="grafik.html"> Grafik</a></li>
         </ul>
       </nav>
     </header>
 
     <main id="forside">
-      <img src="../04_animation/website/img/Forside.svg" alt="Forside" />
+      <img src="website/img/Forside.svg" alt="Forside" />
       <h2>Er du klar til en udfordring?</h2>
       <h3>
         Her handler det om at samle så mange badeænder som muligt, før tiden
